--- a/components/Pagination/InfinitePagination.module.scss
+++ b/components/Pagination/InfinitePagination.module.scss
@@ -2,6 +2,9 @@
 
 .container {
   h1 {
+    border-top: 1px solid $color-dark-gray;
+    padding-top: spacing(1);
+    text-align: center;
     margin-bottom: spacing(2);
   }
 }
