--- a/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
+++ b/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
@@ -10,6 +10,8 @@
     padding: 0 spacing(8);
   }
   h1 {
+    border-top: 1px solid $color-dark-gray;
+    padding-top: spacing(1);
     text-align: center;
     margin-bottom: spacing(2);
   }
